--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.LiftLogr"
         tools:targetApi="31">
         <activity
+            android:name=".Nutrition"
+            android:exported="false" />
+        <activity
+            android:name=".Cardio"
+            android:exported="false" />
+        <activity
+            android:name=".Lifting"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity3"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
