--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.LiftLogr"
         tools:targetApi="31">
         <activity
+            android:name=".fiveKMGoal"
+            android:exported="false" />
+        <activity
+            android:name=".twoMileGoal"
+            android:exported="false" />
+        <activity
+            android:name=".mileGoal"
+            android:exported="false" />
+        <activity
             android:name=".Nutrition"
             android:exported="false" />
         <activity
